Track time is now updated. User can select a track from playlist to play it.

--- a/css/my_css/homepage.css
+++ b/css/my_css/homepage.css
@@ -158,7 +158,8 @@ html {
   transition: 100ms all; }
 .body .div_player_component .div_playlist .selected_track {
   background-color: #14273E;
-  color: #DCECFA; }
+  color: #DCECFA;
+  transition: 100ms all; }
   .body .div_player_component .div_playlist .selected_track .div_likes_and_downloads a,
   .body .div_player_component .div_playlist .selected_track .div_likes_and_downloads a:hover,
   .body .div_player_component .div_playlist .selected_track .div_likes_and_downloads a:active {
@@ -169,9 +170,8 @@ html {
   background-color: #14273E;
   color: #DCECFA;
   transition: 100ms all; }
-  .body .div_player_component .div_playlist .selected_track:hover a:hover,
-  .body .div_player_component .div_playlist .selected_track:hover a:active {
-    background: #DCECFA;
+  .body .div_player_component .div_playlist .selected_track:hover .div_likes_and_downloads a:hover,
+  .body .div_player_component .div_playlist .selected_track:hover .div_likes_and_downloads a:active {
     background-color: #DCECFA;
     color: #0F1D2E;
     transition: 100ms all; }
@@ -466,6 +466,7 @@ html {
           height: 2rem;
           font-size: 2.3rem; }
     .body .splash_page_background {
-      width: 25%; } }
+      min-width: 320px;
+      max-width: 25%; } }
 
 /*# sourceMappingURL=homepage.css.map */
