--- a/css/my_css/homepage.css
+++ b/css/my_css/homepage.css
@@ -1,4 +1,5 @@
-.body, .body .div_video, .body .div_player_component, .body .div_player_component .div_current_track_playing_info, .body .div_player_component .div_current_track_playing_info .artist_name, .body .div_player_component .div_current_track_playing_info .track_name, .body .div_player_component .div_info_about_website, .body .div_player_component .div_info_about_website .btn_info,
+.body, .body .div_video, .body .div_show_hide_player .btn_hide_player,
+.body .div_show_hide_player .btn_show_player, .body .div_player_component, .body .div_player_component .div_current_track_playing_info, .body .div_player_component .div_current_track_playing_info .artist_name, .body .div_player_component .div_current_track_playing_info .track_name, .body .div_player_component .div_info_about_website, .body .div_player_component .div_info_about_website .btn_info,
 .body .div_player_component .div_info_about_website i, .body .div_player_component .div_info_about_website .div_playlist_heading, .body .div_player_component .div_playlist, .body .div_player_component .div_playlist .div_track, .body .div_player_component .div_playlist .div_track .div_track_info, .body .div_player_component .div_playlist .div_track .div_track_info .div_track_index, .body .div_player_component .div_playlist .div_track .div_track_info .div_main_info, .body .div_player_component .div_playlist .div_track .div_likes_and_downloads, .body .div_player_component .div_playlist .div_track .div_likes_and_downloads a,
 .body .div_player_component .div_playlist .div_track .div_likes_and_downloads a:visited,
 .body .div_player_component .div_playlist .div_track .div_likes_and_downloads button,
@@ -44,6 +45,12 @@ html {
 .body .div_video video {
   width: 100%;
   margin-top: 80px; }
+.body .div_show_hide_player .btn_hide_player,
+.body .div_show_hide_player .btn_show_player {
+  width: 0px;
+  height: 0px;
+  z-index: -100;
+  visibility: hidden; }
 .body .div_player_component .background_image {
   top: 0;
   left: 0;
@@ -72,36 +79,38 @@ html {
   .body .div_player_component .div_current_track_playing_info .track_name {
     font-size: 1.6rem;
     font-weight: bold; }
-.body .div_player_component .div_info_about_website .btn_info,
-.body .div_player_component .div_info_about_website i {
-  width: 1.4rem;
-  height: 1.4rem;
-  border-style: none;
-  border-radius: 100%;
-  background-color: #DCECFA;
-  color: #14273E;
-  font-size: 1.6rem;
-  cursor: pointer; }
-.body .div_player_component .div_info_about_website i:hover {
-  background-color: #14273E;
-  color: #DCECFA;
-  transition: 100ms all; }
-.body .div_player_component .div_info_about_website i:active {
-  background-color: #14273E;
-  color: #DCECFA;
-  transition: 100ms all; }
-.body .div_player_component .div_info_about_website .btn_info {
-  position: relative;
-  margin-top: -0.7rem; }
-.body .div_player_component .div_info_about_website .div_playlist_heading {
-  align-content: flex-end;
-  height: 4rem;
-  border-bottom: 2px solid #274C77; }
-  .body .div_player_component .div_info_about_website .div_playlist_heading p {
-    margin: 0px;
-    margin-bottom: 0.25rem;
-    padding: 0px;
-    font-size: 1.5rem; }
+.body .div_player_component .div_info_about_website {
+  margin-top: -1.25rem; }
+  .body .div_player_component .div_info_about_website .btn_info,
+  .body .div_player_component .div_info_about_website i {
+    width: 1.4rem;
+    height: 1.4rem;
+    border-style: none;
+    border-radius: 100%;
+    background-color: #DCECFA;
+    color: #14273E;
+    font-size: 1.6rem;
+    cursor: pointer; }
+  .body .div_player_component .div_info_about_website i:hover {
+    background-color: #14273E;
+    color: #DCECFA;
+    transition: 100ms all; }
+  .body .div_player_component .div_info_about_website i:active {
+    background-color: #14273E;
+    color: #DCECFA;
+    transition: 100ms all; }
+  .body .div_player_component .div_info_about_website .btn_info {
+    position: relative;
+    margin-top: -0.7rem; }
+  .body .div_player_component .div_info_about_website .div_playlist_heading {
+    align-content: flex-end;
+    height: 4rem;
+    border-bottom: 2px solid #274C77; }
+    .body .div_player_component .div_info_about_website .div_playlist_heading p {
+      margin: 0px;
+      margin-bottom: 0.25rem;
+      padding: 0px;
+      font-size: 1.5rem; }
 .body .div_player_component .div_playlist .div_track {
   justify-content: space-between;
   border-bottom: 2px solid #274C77;
@@ -456,6 +465,24 @@ html {
       z-index: -10; }
       .body .div_video video {
         margin: 0px; }
+    .body .div_show_hide_player .btn_hide_player,
+    .body .div_show_hide_player .btn_show_player {
+      width: 2rem;
+      height: 2rem;
+      border-radius: 100%;
+      border-style: none;
+      background-color: #14273E;
+      color: #A3CEF1;
+      z-index: 3;
+      visibility: visible; }
+    .body .div_show_hide_player .btn_hide_player {
+      top: 50%;
+      left: 72.5%;
+      position: fixed; }
+    .body .div_show_hide_player .btn_show_player {
+      bottom: 1rem;
+      right: 1rem;
+      position: fixed; }
     .body .div_player_component {
       min-width: 320px;
       max-width: 25%; }
